* Remove fuse.dom.Element.create() in favor of just calling fuse.dom.Element(). [jddalton]

* Fix Fusebox reference to postProcess() when it's redefined. [jddalton]

* Fix Fusebox memory leak associated with ActiveX technique. [jddalton, Sebastian Werner]

* Add fuse.Fusebox.getMode() and fuse.Fusebox.setMode() methods. [jddalton]

* Fix Firefox bug when adding and then removing iframes before dom load. [getify, jddalton]

* Rewrite Fusebox to use iframes by default. [jddalton]

* Fix IE8 bug with element.hasAttribute('selected') and other flagged attributes. [Diego Perini, jddalton]

* Further simplify the Ruby build system. [Kit Goncharov]

* Add all Scotch unit tests for `fuse.Array`. [Kit Goncharov]

* Add a lightweight version of Sprockets to `Build.rb` for building FuseJS. [Kit Goncharov]

* Switch to a pure-Ruby build system. [Kit Goncharov]
  - To build FuseJS, run `ruby Build.rb -d` or `--dist`.
  - To build the old unit tests, run `ruby Build.rb -t` or `--test`.

* Add fuse.Object.getClassOf() and provide a fallback in case {}.toString.call(...) fails to resolve sandboxed natives [[Class]]. [jddalton]

* Move fuse.Enumerable to fuse.Class.mixins.enumerable. [FuseJS LH #68] [jddalton]

* Add fuse.dom.Event._addDispatcher and rename other implied private methods. [jddalton]

* Add `skipDataInit` argument to fuse.dom.Node.getFuseId(). [jddalton]

* Add clone(deep) methods to Array, Element, Hash, Object, Number, Range, String, and Template. [FuseJS LH #18] [jddalton, Joe Gornick]

* Add caching/decorating options to fuse.dom.Element create(), from(), fromElement(), fromHTML(), and fromId(). [jddalton]

* Rename fuse.dom.getFragmentFromString() to fuse.dom.getFragmentFromHTML(). [jddalton]

* Add fuse.dom.Element methods fromId() and fromHTML(). [jddalton]

* Remove fuse.get() and fuse.getById(). [jddalton]

* Optimize event findElement(), getPointerX(), and getPointerX() methods by reducing the number of elements that are decorated. [jddalton]
